# hal-api-ml

./: CMakeLists.txt  LICENSE  README.md  hal-api-ml.pc.in  meson.build
.github/workflows/: gbs_build.yml
doc/: hal_ml_doc.h
include/: hal-ml-interface-1.h  hal-ml-interface.h  hal-ml-types.h  hal-ml.h
packaging/: hal-api-ml-manifest.xml  hal-api-ml.spec
src/: hal-api-ml.c
tests/: ml-haltests.cc
